--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,52 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Coursera CSS</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Coursera</title>
+	<link rel="stylesheet" href="css\styles.css">
+
 </head>
 <body>
-	<h1>Hello Coursera!</h1>
+	<h1>Great courses on Coursera!</h1>
+	<div class="container">
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<p id="floating_title">HTML</p>
+			<p id="html"> 
+				HTML Lorem ipsum Culpa Duis eiusmod aliquip ut. 
+				Lorem ipsum Esse nulla est laboris commodo 
+				aute incididunt proident non commodo laborum 
+				consequat tempor Excepteur Excepteur in occaeca
+				t et Ut ullamco do. Lorem ipsum Ut laborum qui 
+				magna nulla nostrud ea fugiat sit aute dolor la
+				boris sed esse laboris aliquip incididunt tempor
+				 sunt incididunt occaecat qui ea ut in ullamco nisi
+				  exercitation aute magna deserunt exercitation.</p>
+		</div>
+		<div class="col-lg-4 col-md-6 col-sm-12" >
+			<p id="floating_title">CSS</p>
+			<p id="css">CSS
+				Lorem ipsum Aliqua aliquip in voluptate. Lorem ipsu
+				m Sint culpa dolor nulla ad in eu dolor occaecat sit
+				 commodo qui do laborum id ut Ut Excepteur do occaec
+				 at anim consequat commodo nisi eiusmod id tempor ci
+				 llum dolore quis officia incididunt consequat cupid
+				 atat ut sunt.</p>
+		</div>
+		<div class="col-lg-4 col-md-12 col-sm-12" >
+			<p id="floating_title">JavaScript</p>
+			<p id="JavaScript">JavaScript
+				Lorem ipsum Ullamco labore in Excepteur consectetur. 
+				Lorem ipsum Enim velit ad consequat Ut cupidatat paria
+				tur incididunt id sit sunt fugiat ex dolor ut nulla pa
+				riatur anim consectetur Excepteur occaecat amet dolor
+				e in dolor sint. Lorem ipsum Ut officia tempor sed in
+				 eiusmod aute nulla labore sed nulla et in officia fu
+				 giat dolor aliquip in ea Duis consectetur deserunt de
+				 serunt est Ut ullamco eiusmod sed tempor nulla quis 
+				 pariatur consequat quis Ut sunt deserunt anim dolor.</p>
+		</div>
+	</div>
+
+
 </body>
 </html>
